--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1139</width>
-    <height>823</height>
+    <width>1128</width>
+    <height>695</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,6 +15,237 @@
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">/* === Глобальный фон и текст === */
+QWidget {
+    background-color: #1e1e1e;
+    color: #d0d0d0;
+    font-family: &quot;Segoe UI&quot;, &quot;Roboto&quot;, &quot;San Francisco&quot;, sans-serif;
+    font-size: 8pt;
+}
+
+/* === QMainWindow / QDialog / QFrame === */
+QMainWindow, QDialog, QFrame {
+    background-color: #1e1e1e;
+    border: none;
+}
+
+/* === QLabel / QCheckBox / QRadioButton === */
+QLabel, QCheckBox, QRadioButton {
+    color: #d0d0d0;
+}
+QCheckBox:disabled, QRadioButton:disabled {
+    color: #666;
+}
+
+/* === QPushButton, QToolButton, QCommandLinkButton === */
+QPushButton, QToolButton, QCommandLinkButton {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 #3a3a3a, stop:1 #2d2d2d);
+    border: 1px solid #5c5c5c;
+    border-radius: 6px;
+    color: #e0e0e0;
+    font-weight: normal;
+}
+QPushButton:hover, QToolButton:hover {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 #4a4a4a, stop:1 #393939);
+}
+QPushButton:pressed, QToolButton:pressed {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 #2b547e, stop:1 #1c2a3a);
+    border: 1px solid #2e74d0;
+    color: #ffffff;
+}
+QPushButton:disabled, QToolButton:disabled {
+    color: #777;
+    background: #2b2b2b;
+}
+
+/* === QLineEdit, QTextEdit, QPlainTextEdit, SpinBoxes === */
+QLineEdit, QTextEdit, QPlainTextEdit, QSpinBox, QDoubleSpinBox,
+QTimeEdit, QDateEdit, QDateTimeEdit {
+    background-color: #2b2b2b;
+    color: #ffffff;
+    border: 1px solid #5c5c5c;
+    border-radius: 6px;
+    padding: 4px;
+}
+QLineEdit:focus, QTextEdit:focus, QPlainTextEdit:focus {
+    border: 1px solid #2e74d0;
+}
+
+/* === QComboBox === */
+QComboBox {
+    background-color: #2b2b2b;
+    border: 1px solid #5c5c5c;
+    padding: 4px;
+    border-radius: 6px;
+    color: #dcdcdc;
+}
+QComboBox QAbstractItemView {
+    background-color: #252525;
+    color: #dcdcdc;
+    border: 1px solid #5c5c5c;
+    selection-background-color: #2b547e;
+}
+QComboBox::drop-down {
+    subcontrol-origin: padding;
+    subcontrol-position: top right;
+    width: 20px;
+    border-left: 1px solid #5c5c5c;
+    background-color: #3a3a3a;
+}
+QComboBox::down-arrow {
+    image: url(/usr/share/icons/Adwaita/16x16/actions/go-down-symbolic.symbolic.png);
+}
+
+/* === QCheckBox === */
+QCheckBox::indicator:unchecked {
+    border: 1px solid #5c5c5c;
+    background: #2a2a2a;
+    border-radius: 3px;
+    width: 14px; height: 14px;
+}
+QCheckBox::indicator:checked {
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 #2e74d0, stop:1 #2b547e);
+    image: url(/usr/share/icons/Adwaita/16x16/actions/object-select-symbolic.symbolic.png);
+    border-radius: 3px;
+    width: 14px; height: 14px;
+}
+
+/* === QRadioButton === */
+QRadioButton::indicator {
+    width: 14px; height: 14px;
+    border-radius: 7px;
+}
+QRadioButton::indicator:unchecked {
+    background: #2a2a2a;
+    border: 1px solid #5c5c5c;
+}
+QRadioButton::indicator:checked {
+    background-color: qradialgradient(cx:0.5, cy:0.5, radius:0.4,
+        fx:0.5, fy:0.5, stop:0 #ffffff, stop:1 #2b547e);
+    border: 1px solid #2e74d0;
+}
+
+/* === QScrollBar === */
+QScrollBar:horizontal, QScrollBar:vertical {
+    background: #1e1e1e;
+    margin: 0px;
+    border: none;
+}
+QScrollBar::handle {
+    background: #444;
+    border-radius: 4px;
+    min-height: 20px;
+}
+QScrollBar::handle:hover {
+    background: #2b547e;
+}
+QScrollBar::add-line, QScrollBar::sub-line {
+    background: none;
+    height: 0px;
+    width: 0px;
+}
+
+/* === QSlider === */
+QSlider::groove:horizontal, QSlider::groove:vertical {
+    background: #444;
+    border: 1px solid #5c5c5c;
+    border-radius: 4px;
+}
+QSlider::handle:horizontal, QSlider::handle:vertical {
+    background: #2e74d0;
+    border-radius: 6px;
+    border: 1px solid #5c5c5c;
+    width: 12px;
+    height: 12px;
+}
+
+/* === QProgressBar === */
+QProgressBar {
+    border: 1px solid #5c5c5c;
+    border-radius: 6px;
+    background: #2a2a2a;
+    text-align: center;
+    color: #ccc;
+}
+QProgressBar::chunk {
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 #2e74d0, stop:1 #2b547e);
+    border-radius: 6px;
+}
+
+/* === QTabBar === */
+QTabBar::tab {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0 #3a3a3a, stop:1 #2d2d2d);
+    border: 1px solid #5c5c5c;
+    padding: 6px 10px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    margin-right: 2px;
+    color: #dcdcdc;
+}
+QTabBar::tab:selected {
+    background: #2b547e;
+    border: 1px solid #2e74d0;
+    color: white;
+}
+
+/* === QMenu === */
+QMenu {
+    background-color: #2a2a2a;
+    color: #e0e0e0;
+    border: 1px solid #5c5c5c;
+}
+QMenu::item {
+    padding: 5px 20px;
+}
+QMenu::item:selected {
+    background-color: #2b547e;
+}
+
+/* === QMenuBar === */
+QMenuBar {
+    background: #1e1e1e;
+    color: #dcdcdc;
+}
+QMenuBar::item {
+    padding: 4px 10px;
+}
+QMenuBar::item:selected {
+    background-color: #2b547e;
+}
+
+/* === QTreeView / QTreeWidget === */
+QTreeView, QTreeWidget {
+    background-color: #2a2a2a;
+    color: #dcdcdc;
+    alternate-background-color: #2d2d2d;
+    border: 1px solid #5c5c5c;
+}
+QTreeView::item:selected, QTreeWidget::item:selected {
+    background-color: #2b547e;
+    color: white;
+}
+QHeaderView::section {
+    background-color: #3a3a3a;
+    border: 1px solid #5c5c5c;
+    padding: 4px;
+    color: #dcdcdc;
+}
+
+/* === QStatusBar === */
+QStatusBar {
+    background-color: #1e1e1e;
+    color: #8dc3ff;
+    border-top: 1px solid #3a3a3a;
+}
+</string>
   </property>
   <property name="documentMode">
    <bool>false</bool>
@@ -47,9 +278,9 @@
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>47</green>
-         <blue>47</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
@@ -119,18 +350,18 @@
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>0</red>
-         <green>0</green>
-         <blue>0</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>47</green>
-         <blue>47</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
@@ -193,9 +424,9 @@
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>47</green>
-         <blue>47</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
@@ -265,18 +496,18 @@
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>0</red>
-         <green>0</green>
-         <blue>0</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>47</green>
-         <blue>47</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
@@ -339,9 +570,9 @@
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>47</green>
-         <blue>47</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
@@ -411,18 +642,18 @@
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>47</green>
-         <blue>47</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>47</green>
-         <blue>47</blue>
+         <red>30</red>
+         <green>30</green>
+         <blue>30</blue>
         </color>
        </brush>
       </colorrole>
@@ -476,13 +707,6 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
-     <widget class="Line" name="line">
-      <property name="orientation">
-       <enum>Qt::Orientation::Horizontal</enum>
-      </property>
-     </widget>
-    </item>
-    <item>
      <widget class="QFrame" name="MainFrame">
       <property name="frameShape">
        <enum>QFrame::Shape::StyledPanel</enum>
@@ -499,8 +723,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1139</width>
-     <height>21</height>
+     <width>1128</width>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -552,7 +776,7 @@
     <bool>false</bool>
    </property>
    <property name="features">
-    <set>QDockWidget::DockWidgetFeature::DockWidgetVerticalTitleBar</set>
+    <set>QDockWidget::DockWidgetFeature::DockWidgetMovable|QDockWidget::DockWidgetFeature::DockWidgetVerticalTitleBar</set>
    </property>
    <property name="allowedAreas">
     <set>Qt::DockWidgetArea::BottomDockWidgetArea|Qt::DockWidgetArea::TopDockWidgetArea</set>
@@ -583,8 +807,8 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset>
-            <normaloff>icons/Icon01.png</normaloff>icons/Icon01.png</iconset>
+           <iconset resource="resources.qrc">
+            <normaloff>:/icons/icons/Icon01.png</normaloff>:/icons/icons/Icon01.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -609,8 +833,8 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset>
-            <normaloff>icons/Icon02.png</normaloff>icons/Icon02.png</iconset>
+           <iconset resource="resources.qrc">
+            <normaloff>:/icons/icons/Icon02.png</normaloff>:/icons/icons/Icon02.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -635,8 +859,8 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset>
-            <normaloff>icons/Icon03.png</normaloff>icons/Icon03.png</iconset>
+           <iconset resource="resources.qrc">
+            <normaloff>:/icons/icons/Icon03.png</normaloff>:/icons/icons/Icon03.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -658,8 +882,8 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset>
-            <normaloff>icons/Icon04.png</normaloff>icons/Icon04.png</iconset>
+           <iconset resource="resources.qrc">
+            <normaloff>:/icons/icons/Icon04.png</normaloff>:/icons/icons/Icon04.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -681,8 +905,8 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset>
-            <normaloff>icons/Icon05.png</normaloff>icons/Icon05.png</iconset>
+           <iconset resource="resources.qrc">
+            <normaloff>:/icons/icons/Icon05.png</normaloff>:/icons/icons/Icon05.png</iconset>
           </property>
           <property name="iconSize">
            <size>
@@ -744,7 +968,7 @@
    <property name="minimumSize">
     <size>
      <width>204</width>
-     <height>123</height>
+     <height>122</height>
     </size>
    </property>
    <property name="floating">
@@ -772,8 +996,14 @@
        <property name="sortingEnabled">
         <bool>false</bool>
        </property>
+       <property name="animated">
+        <bool>false</bool>
+       </property>
        <attribute name="headerVisible">
         <bool>false</bool>
+       </attribute>
+       <attribute name="headerHighlightSections">
+        <bool>true</bool>
        </attribute>
        <attribute name="headerStretchLastSection">
         <bool>true</bool>
@@ -838,37 +1068,9 @@
     <string>Redo</string>
    </property>
   </action>
-  <action name="recent1">
-   <property name="text">
-    <string/>
-   </property>
-  </action>
-  <action name="recent2">
-   <property name="text">
-    <string/>
-   </property>
-  </action>
-  <action name="recent3">
-   <property name="text">
-    <string/>
-   </property>
-  </action>
-  <action name="recent4">
-   <property name="text">
-    <string/>
-   </property>
-  </action>
-  <action name="recent5">
-   <property name="text">
-    <string/>
-   </property>
-  </action>
-  <action name="action321312312341321312312341321312312341321312312341321312312341">
-   <property name="text">
-    <string>321312312341321312312341321312312341321312312341321312312341</string>
-   </property>
-  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
